recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: not found: value n
if(n==0) {return()}
   ^Tree:7: error: not found: value step
		current(step)
                        ^