recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, lenght:Double, angle:Double, shrink:Double)    {
if(n==0) {return()}
	else{
		avance(lenght)
		droite(angle)
		current(step)
		subtree(steps-1,lenght*shrink,angle,shrink)
		gauche(2*angle)
		subtree(steps-1,lenght*shrink,angle,shrink)
	}
}	
		
		
		
		
		


